# adventofhaskellcode

./: .travis.yml  LICENSE  README.md  advent.cabal  stack.yaml
app/: Main.hs
src/Advent/: Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
test/: AdventSpec.hs
test/Advent/: Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs
