name:                advent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Advent.Day2
                     , Advent.Day3
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , lens
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable advent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , text
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             AdventSpec.hs
  build-depends:       base
                     , advent
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/advent
