name:                advent
version:             0.1.0.0
synopsis:            An attempt to answer the Advent of Code exercises in Haskell
description:         Please see README.md
homepage:            http://github.com/screamish/adventofhaskellcode
license:             BSD3
license-file:        LICENSE
author:              Simon Fenton
maintainer:          swfenton@gmail.com
copyright:           2016 Simon Fenton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Advent.Day2
                     , Advent.Day3
                     , Advent.Day4
                     , Advent.Day5
                     , Advent.Day6
                     , Advent.Day7
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , lens
                     , multiset
                     , pureMD5
                     , containers
                     , mtl
                     , vector
                     , Earley
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable advent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             AdventSpec.hs
  other-modules:       Advent.Day2Spec
                     , Advent.Day3Spec
                     , Advent.Day4Spec
                     , Advent.Day5Spec
                     , Advent.Day6Spec
                     , Advent.Day7Spec
  build-depends:       base
                     , advent
                     , hspec
                     , QuickCheck
                     , text
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/advent
